--- a/style.css
+++ b/style.css
@@ -17,9 +17,88 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     color: #fff;
     display: flex;
     align-items: center;
-    padding-left: 2.5rem;
 }
 
 .header h1 {
     font-size: 40px;
+    margin-left: 2.5rem;
+    float: left;
+}
+
+.search_image {
+    width: 100%;
+    height: 357px;    
+    background-image: url('./img/pexels-kindel-media-7054547.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.search_image__field {
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    align-items: center;
+}
+
+.search_field {
+    margin: 10.5% 6%;
+    width: 88.8%;
+    height: 48px;
+    background: #F8F9FA;
+    border: 1px solid #2738CC;
+    border-radius: 32px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #2738CC;
+}
+
+.mi-input::-webkit-input-placeholder,
+.mi-input::-webkit-input-placeholder:before,
+.mi-input::-webkit-input-placeholder:after,
+.search_field::placeholder, 
+.search_field::-moz-placeholder, 
+.search_field::-ms-input-placeholder, 
+.search_field::-webkit-input-placeholder {
+    color: #2738CC;
+}
+
+.collections_section--title {
+    display: flex;
+    padding-top: 35px;
+    padding-left: 39px;
+}
+
+.collections_section--title h2{
+    color: black;
+    width: fit-content;
+}
+
+.action-button {
+    margin-left: 20px;
+    box-sizing: border-box;
+    width: 170px;
+    height: 34px;
+    background: #2738CC;
+    border: 1px solid #F8F9FA;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+    color: #F8F9FA;
+    font-size: 16px;
+}
+
+.create-button {
+    margin-top: 40px;
+    margin-left: 80px;
+    box-sizing: border-box;
+    width: 88.8%;
+    height: 34px;
+    background: #2738CC;
+    border: 1px solid #F8F9FA;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+    color: #F8F9FA;
+    font-size: 16px;
 }
