--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     width: fit-content;
 }
 
+.collections_section--title a{
+    width: fit-content;
+}
+
 .action-button {
     margin-left: 20px;
     box-sizing: border-box;
