--- a/style.css
+++ b/style.css
@@ -128,3 +128,95 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     margin-left: 5px;
     color: black;
 }
+
+.create_alarm__title {
+    margin-left: 51px;
+    margin-top: 48px;
+
+}
+
+.create_alarm__title h1 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 49px;
+    color: #000000;
+}
+
+.create_alarm__title p {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.create_alarm__form--row {
+    display: flex;
+}
+
+.form_ca-1 {
+    margin-top: 52px;
+    margin-left: 48px;
+    width: 540px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form_ca-1__text{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+}
+
+.form_ca-1__input{
+    margin-top: 5px;
+    width: 256px;
+    height: 48px;
+    font-size: 24px;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 32px;
+}
+
+.form_ca--textarea {
+    margin-top: 52px;
+    margin-left: 48px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.form_ca-1__textarea {
+    margin-top: 5px;
+    width: 88.8%;
+    height: 256px;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 32px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 39px;
+    color: #000000;
+}
+
+.form_ca--button {
+    margin-top: 40px;
+    margin-left: 48px;
+    box-sizing: border-box;
+    width: 88.8%;
+    height: 48px;
+    background: #2738CC;
+    border: 1px solid #F8F9FA;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+    color: #F8F9FA;
+    font-size: 24px;
+}
