--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ p, h1, h2, h3, h4, h5, h6, li, a {
 
 .create-button {
     margin-top: 40px;
+    margin-bottom: 40px;
     margin-left: 80px;
     box-sizing: border-box;
     width: 88.8%;
@@ -105,6 +106,50 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     border-radius: 32px;
     color: #F8F9FA;
     font-size: 16px;
+}
+
+.collections_section--row {
+    width: 100%;
+    display: flex;
+    margin-left: 48px;
+    margin-top: 35px;
+}
+
+.collections-section--row__element{
+    width: 256px;
+    height: 384px;
+    border-radius: 64px;
+    margin-left: 32px;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+#cocina {
+    background: url('./img/cocina.png');
+}
+
+#gimnasio {
+    background: url('./img/gimnasio.png');
+}
+
+#estudio {
+    background: url('./img/estudio.png');
+}
+
+.collections-section--row__element button {
+    margin: 326px 41px 24px 41px;
+    background: #F8F9FA;
+    border: 1px solid #2738CC;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+    width: 170px;
+    height: 34px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #2738CC;
 }
 
 .back_action{
