--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     font-family: 'Montserrat', sans-serif;
 }
 
+.autor{
+    font-size: 12px;
+    text-align: center;
+    color: #5e5e5e;
+}
+
 .header {
     height: 64px;
     width: 100%;
@@ -23,6 +29,23 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     font-size: 40px;
     margin-left: 2.5rem;
     float: left;
+}
+
+.header__user {
+    box-sizing: border-box;
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    right: 1%;
+    top: 8px;
+    border-radius: 100%;
+    background: #F8F9FA;
+    border: 1px solid #F8F9FA;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.header__user svg {
+    margin: 9.5px 11.5px;
 }
 
 .search_image {
