--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ p, h1, h2, h3, h4, h5, h6, li, a {
 }
 
 .autor{
-    font-size: 12px;
+    font-size: 14px;
     text-align: center;
     color: #5e5e5e;
+    margin-bottom: 20px;
 }
 
 .header {
