--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     font-family: 'Montserrat', sans-serif;
 }
 
+.text {
+ font-weight: bolder;
+ font-size: xx-large;
+ font-family: 'Monserrat', sans-serif;
+ margin: 25px;
+}
+
 .autor{
     font-size: 14px;
     text-align: center;
@@ -65,7 +72,7 @@ p, h1, h2, h3, h4, h5, h6, li, a {
 }
 
 .search_field {
-    margin: 10.5% 6%;
+    margin: 2%;
     width: 88.8%;
     height: 48px;
     background: #F8F9FA;
@@ -158,6 +165,14 @@ p, h1, h2, h3, h4, h5, h6, li, a {
 
 #estudio {
     background: url('./img/estudio.png');
+}
+
+#echodot {
+    background: url('./img/echodot.jpg');
+}
+
+#reloj {
+    background: url('./img/reloj.jpg')
 }
 
 .collections-section--row__element button {
@@ -276,6 +291,22 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     color: #000000;
 }
 
+.form_ca-1__areatext {
+    margin-top: 5px;
+    width: 88.8%;
+    height: 50px;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 32px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 39px;
+    color: #000000;
+    cursor: pointer;
+}
+
 .form_ca--button {
     margin-top: 40px;
     margin-left: 48px;
@@ -288,4 +319,90 @@ p, h1, h2, h3, h4, h5, h6, li, a {
     border-radius: 32px;
     color: #F8F9FA;
     font-size: 24px;
+}
+
+.grilla {
+    display: grid;
+    grid-template-columns: repeat(5, minmax(300px, 1fr));
+    grid-gap: 20px;
+    max-width: 1200px;
+    padding: 20px;
+    margin: 25px;
+}
+
+.tarjeta {
+    width: 300px;
+    border-radius: 10px;
+    border: 1px solid black;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    text-align: left;
+}
+
+.tarjeta img {
+    width: 100%;
+    height: auto;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.contenido {
+    padding: 20px;
+}
+
+.dropbtn {
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-top: 5px;
+    width: 88.8%;
+    height: 50px;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 32px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 39px;
+    color: #000000;
+    cursor: pointer;
+}
+
+.dropdown {
+    margin-left: 48px;
+    width: 100%;
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: #333;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content ul,
+.dropdown-content li {
+    list-style: none; /* Quita las viñetas de la lista */
+    margin: 0; /* Quita los márgenes predeterminados */
+    padding: 0; /* Quita el relleno predeterminado */
 }
